test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/addr_of_string.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: puts
        List[1]: 
          TIdentifier: s
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: str
                  CSingleInit: 
                    CAddrOf: 
                      CString: 
                        CStringLiteral: 
                          List[15]: 
                            TChar: 83
                            TChar: 97
                            TChar: 109
                            TChar: 112
                            TChar: 108
                            TChar: 101
                            TChar: 9
                            TChar: 115
                            TChar: 116
                            TChar: 114
                            TChar: 105
                            TChar: 110
                            TChar: 103
                            TChar: 33
                            TChar: 10
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Array: 
                      TLong: 16
                      Char: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CDereference: 
                      CVar: 
                        TIdentifier: str
                        None: 
                      None: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: one_past_the_end
                  CSingleInit: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: str
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Array: 
                      TLong: 16
                      Char: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: last_byte_pointer
                  CSingleInit: 
                    CBinary: 
                      CSubtract: 
                      CCast: 
                        CVar: 
                          TIdentifier: one_past_the_end
                          None: 
                        Pointer: 
                          Char: 
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Char: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDereference: 
                    CVar: 
                      TIdentifier: last_byte_pointer
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
